case 5630 - Aligned tabs. Paragraph height fix.

--- a/css/arbo-widget.css
+++ b/css/arbo-widget.css
@@ -13,6 +13,13 @@
   width: 550px;
 }
 
+#arbo-widget p {
+  font-size: 14px;
+  line-height: 14px;
+  margin: 0;
+  padding: 5px 0 5px 0;
+}
+
 .ui-dialog {
   width: auto !important;
   max-width: 580px;
@@ -70,6 +77,7 @@ h1#arbo-review {
   text-decoration: none;
   width: 5.1em;
   height: 25px;
+  font-size: 14px;
 }
 
 #arbo-widget #progress a.future {
@@ -105,6 +113,7 @@ h1#arbo-review {
 
 #arbo-widget .record-controls {
   margin: 0 auto;
+  height: 32px;
   width: 32px;
 }
 
